--- a/python/transform.ipynb
+++ b/python/transform.ipynb
@@ -72,9 +72,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pyspark.ml.feature import HashingTF, IDF, Tokeninzer, StopWordsRemover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#database connection\n",
-    "connection_string =\"postgres:Shjais2014@localhost:5432/twitter_db\"\n",
-    "engine = create_engine(f'postgresql://{connection_string}')"
+    "# connection_string =\"postgres:Shjais2014@localhost:5432/twitter_db\"\n",
+    "# engine = create_engine(f'postgresql://{connection_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark import SparkFiles\n",
+    "url =\"https://raw.githubusercontent.com/Teresa-18/finalProjectBCS/main/output_data/tweets.csv\"\n",
+    "#output_data_file = \"./output_data/tweets.csv\"\n",
+    "spark.sparkContext.addFile(url)\n",
+    "df = spark.read.csv(SparkFiles.get(\"tweets.csv\"), sep=\",\", header=True)\n",
+    "# Show DataFrame\n",
+    "df.show()"
    ]
   },
   {
