--- a/python/transform.ipynb
+++ b/python/transform.ipynb
@@ -10,9 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.3"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python383jvsc74a57bd044f87d93d22815aca40ff46df2a68f0681cdcfc4aee774b27fdbe7d7cab95300",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -23,36 +27,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import pandas as pd\n",
+    "# import pymongo\n",
+    "# import psycopg2\n",
+    "# from sqlalchemy import create_engine\n",
+    "# from sqlalchemy import text\n",
+    "# import matplotlib\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import seaborn as sns\n",
+    "# import numpy as np\n",
+    "# import os\n",
+    "# # Find the latest version of spark 2.0  from http://www-us.apache.org/dist/spark/ and enter as the spark version\n",
+    "# # For example:\n",
+    "# # spark_version = 'spark-2.4.6'\n",
+    "# spark_version = 'spark-3.1.1'\n",
+    "# os.environ['SPARK_VERSION']=spark_version\n",
+    "\n",
+    "# # Install Spark and Java\n",
+    "# !apt-get update\n",
+    "# !apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
+    "# !wget -q http://www-us.apache.org/dist/spark/$SPARK_VERSION/$SPARK_VERSION-bin-hadoop2.7.tgz\n",
+    "# !tar xf $SPARK_VERSION-bin-hadoop2.7.tgz\n",
+    "# !pip install -q findspark\n",
+    "\n",
+    "# # Set Environment Variables\n",
+    "# os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\"\n",
+    "# os.environ[\"SPARK_HOME\"] = f\"/content/{spark_version}-bin-hadoop2.7\"\n",
+    "\n",
+    "# # Start a SparkSession\n",
+    "# import findspark\n",
+    "# findspark.init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
-    "import pymongo\n",
-    "import psycopg2\n",
-    "from sqlalchemy import create_engine\n",
-    "from sqlalchemy import text\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import numpy as np\n",
-    "import os\n",
-    "# Find the latest version of spark 2.0  from http://www-us.apache.org/dist/spark/ and enter as the spark version\n",
-    "# For example:\n",
-    "# spark_version = 'spark-2.4.6'\n",
-    "spark_version = 'spark-3.1.1'\n",
-    "os.environ['SPARK_VERSION']=spark_version\n",
-    "\n",
-    "# Install Spark and Java\n",
-    "!apt-get update\n",
-    "!apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
-    "!wget -q http://www-us.apache.org/dist/spark/$SPARK_VERSION/$SPARK_VERSION-bin-hadoop2.7.tgz\n",
-    "!tar xf $SPARK_VERSION-bin-hadoop2.7.tgz\n",
-    "!pip install -q findspark\n",
-    "\n",
-    "# Set Environment Variables\n",
-    "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\"\n",
-    "os.environ[\"SPARK_HOME\"] = f\"/content/{spark_version}-bin-hadoop2.7\"\n",
-    "\n",
-    "# Start a SparkSession\n",
-    "import findspark\n",
-    "findspark.init()"
+    "csv_file = \"../output_data/tweets.csv\"\n",
+    "twitter_df = pd.read_csv(csv_file)\n",
+    "twitter_df.to_json (\"../output_data/tweet.json\")"
    ]
   },
   {
@@ -62,8 +78,8 @@
    "outputs": [],
    "source": [
     " # Start Spark session\n",
-    "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName(\"NaiveBayes\").getOrCreate()"
+    "# from pyspark.sql import SparkSession\n",
+    "# spark = SparkSession.builder.appName(\"NaiveBayes\").getOrCreate()"
    ]
   },
   {
@@ -72,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.ml.feature import HashingTF, IDF, Tokeninzer, StopWordsRemover"
+    "# from pyspark.ml.feature import HashingTF, IDF, Tokeninzer, StopWordsRemover"
    ]
   },
   {
@@ -92,13 +108,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark import SparkFiles\n",
-    "url =\"https://raw.githubusercontent.com/Teresa-18/finalProjectBCS/main/output_data/tweets.csv\"\n",
-    "#output_data_file = \"./output_data/tweets.csv\"\n",
-    "spark.sparkContext.addFile(url)\n",
-    "df = spark.read.csv(SparkFiles.get(\"tweets.csv\"), sep=\",\", header=True)\n",
-    "# Show DataFrame\n",
-    "df.show()"
+    "# from pyspark import SparkFiles\n",
+    "# url =\"https://raw.githubusercontent.com/Teresa-18/finalProjectBCS/main/output_data/tweets.csv\"\n",
+    "# #output_data_file = \"./output_data/tweets.csv\"\n",
+    "# spark.sparkContext.addFile(url)\n",
+    "# df = spark.read.csv(SparkFiles.get(\"tweets.csv\"), sep=\",\", header=True)\n",
+    "# # Show DataFrame\n",
+    "# df.show()"
    ]
   },
   {
@@ -107,11 +123,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_sql = open('../sql/select_df.sql','r')\n",
-    "twit_df = pd.read_sql_query(select_sql.read(), con=engine)\n",
+    "# select_sql = open('../sql/select_df.sql','r')\n",
+    "# twit_df = pd.read_sql_query(select_sql.read(), con=engine)\n",
     "\n",
-    "#Close File after use\n",
-    "select_sql.close()"
+    "# #Close File after use\n",
+    "# select_sql.close()"
    ]
   },
   {
@@ -120,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "twit_df"
+    "# twit_df"
    ]
   },
   {
@@ -129,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn.close()"
+    "# conn.close()"
    ]
   },
   {
