--- a/python/db_create.ipynb
+++ b/python/db_create.ipynb
@@ -42,23 +42,31 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Database created successfully........\n"
+     ]
+    }
+   ],
    "source": [
-    "# # create a connection to Postgres\n",
-    "# conn = psycopg2.connect(database=\"postgres\", user='postgres', password='Shjais2014', host='127.0.0.1', port='5432')\n",
-    "# conn.autocommit = True\n",
-    "# cursor = conn.cursor()\n",
+    "# create a connection to Postgres\n",
+    "conn = psycopg2.connect(database=\"postgres\", user='root', password='Shjais2014', host='mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com', port='5431')\n",
+    "conn.autocommit = True\n",
+    "cursor = conn.cursor()\n",
     "\n",
-    "# # create the database in Postgres\n",
-    "# create_database_sql = open('../sql/create_db.sql','r')\n",
-    "# cursor.execute(create_database_sql.read())\n",
+    "# create the database in Postgres\n",
+    "create_database_sql = open('../sql/create_db.sql','r')\n",
+    "cursor.execute(create_database_sql.read())\n",
     "\n",
-    "# #If no error print message\n",
-    "# print(\"Database created successfully........\")\n",
+    "#If no error print message\n",
+    "print(\"Database created successfully........\")\n",
     "\n",
-    "# #Closing the connection and database\n",
-    "# conn.close()\n",
-    "# create_database_sql.close()"
+    "#Closing the connection and database\n",
+    "conn.close()\n",
+    "create_database_sql.close()"
    ]
   },
   {
@@ -179,14 +187,14 @@
    "outputs": [],
    "source": [
     "# create a connection to Postgres\n",
-    "conn = psycopg2.connect(database=\"twitter_db\", user='postgres', password='Shjais2014', host='127.0.0.1', port='5432')\n",
+    "conn = psycopg2.connect(database=\"postgres\", user='root', password='Shjais2014', host='mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com', port='5431')\n",
     "conn.autocommit = True\n",
     "cursor = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,29 +219,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create the database connection\n",
-    "connection_string =\"postgres:Shjais2014@localhost:5432/twitter_db\"\n",
-    "engine = create_engine(f'postgresql://{connection_string}')"
+    "engine = create_engine(f'postgresql://root:Shjais2014@mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com:5431/twitter_db')\n",
+    "\n",
+    "# 'postgresql://root:Shjais2014@mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com:5431/twitter_db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['twitter_tweets']"
+       "[]"
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 15
     }
    ],
    "source": [
@@ -243,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +301,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tweets</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Tough loss today to a very tough Friends Acade...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>RT @misanharriman: NEW IMAGES OF RICHARD OKORO...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RT @JamaicaObserver: A St Catherine man is in ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>RT @arvinjoaquin: A 65-year-old Filipino woman...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RT @misanharriman: NEW IMAGES OF RICHARD OKORO...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>RT @misanharriman: NEW IMAGES OF RICHARD OKORO...</td>\n    </tr>\n    <tr>\n      <th>196</th>\n      <td>RT @CPRNews: Family and friends gathered today...</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>RT @Kwesiblack__: Good Morning guys\\nIs Monday...</td>\n    </tr>\n    <tr>\n      <th>198</th>\n      <td>RT @Myanmar_Now_Eng: Three people were killed ...</td>\n    </tr>\n    <tr>\n      <th>199</th>\n      <td>RT @BragonOfBojima: 4K FOLLOWERS... THANK YOU\\...</td>\n    </tr>\n  </tbody>\n</table>\n<p>200 rows × 1 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 18
     }
    ],
    "source": [
@@ -302,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
