updating to remove credentials

--- a/python/db_create.ipynb
+++ b/python/db_create.ipynb
@@ -42,31 +42,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Database created successfully........\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# create a connection to Postgres\n",
-    "conn = psycopg2.connect(database=\"postgres\", user='root', password='Shjais2014', host='mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com', port='5431')\n",
-    "conn.autocommit = True\n",
-    "cursor = conn.cursor()\n",
+    "# # create a connection to Postgres\n",
+    "# conn = psycopg2.connect(database=\"postgres\", user='root', password='******', host='********.us-east-2.rds.amazonaws.com', port='5431')\n",
+    "# conn.autocommit = True\n",
+    "# cursor = conn.cursor()\n",
     "\n",
-    "# create the database in Postgres\n",
-    "create_database_sql = open('../sql/create_db.sql','r')\n",
-    "cursor.execute(create_database_sql.read())\n",
+    "# # create the database in Postgres\n",
+    "# create_database_sql = open('../sql/create_db.sql','r')\n",
+    "# cursor.execute(create_database_sql.read())\n",
     "\n",
-    "#If no error print message\n",
-    "print(\"Database created successfully........\")\n",
+    "# #If no error print message\n",
+    "# print(\"Database created successfully........\")\n",
     "\n",
-    "#Closing the connection and database\n",
-    "conn.close()\n",
-    "create_database_sql.close()"
+    "# #Closing the connection and database\n",
+    "# conn.close()\n",
+    "# create_database_sql.close()"
    ]
   },
   {
@@ -187,14 +179,14 @@
    "outputs": [],
    "source": [
     "# create a connection to Postgres\n",
-    "conn = psycopg2.connect(database=\"postgres\", user='root', password='Shjais2014', host='mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com', port='5431')\n",
+    "conn = psycopg2.connect(database=\"postgres\", user='root', password='*****', host='******.us-east-2.rds.amazonaws.com', port='5431')\n",
     "conn.autocommit = True\n",
     "cursor = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,30 +211,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create the database connection\n",
-    "engine = create_engine(f'postgresql://root:Shjais2014@mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com:5431/twitter_db')\n",
+    "engine = create_engine(f'postgresql://root:****@**********.us-east-2.rds.amazonaws.com:5431/twitter_db')\n",
     "\n",
     "# 'postgresql://root:Shjais2014@mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com:5431/twitter_db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[]"
+       "['twitter_tweets']"
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 10
     }
    ],
    "source": [
@@ -252,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -290,18 +282,18 @@
        "3    RT @arvinjoaquin: A 65-year-old Filipino woman...\n",
        "4    RT @misanharriman: NEW IMAGES OF RICHARD OKORO...\n",
        "..                                                 ...\n",
-       "195  RT @misanharriman: NEW IMAGES OF RICHARD OKORO...\n",
-       "196  RT @CPRNews: Family and friends gathered today...\n",
-       "197  RT @Kwesiblack__: Good Morning guys\\nIs Monday...\n",
-       "198  RT @Myanmar_Now_Eng: Three people were killed ...\n",
-       "199  RT @BragonOfBojima: 4K FOLLOWERS... THANK YOU\\...\n",
+       "645  RT @RG_Horvath: Last December, Trevor Finlay a...\n",
+       "646  RT @OfficialPWI: Beginning the week of April 1...\n",
+       "647  RT @NYPDHateCrimes: Help identify the below in...\n",
+       "648  RT @DerbysPolice: A man has sadly died followi...\n",
+       "649  RT @arvinjoaquin: A 65-year-old Filipino woman...\n",
        "\n",
-       "[200 rows x 1 columns]"
+       "[650 rows x 1 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tweets</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Tough loss today to a very tough Friends Acade...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>RT @misanharriman: NEW IMAGES OF RICHARD OKORO...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RT @JamaicaObserver: A St Catherine man is in ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>RT @arvinjoaquin: A 65-year-old Filipino woman...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RT @misanharriman: NEW IMAGES OF RICHARD OKORO...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>195</th>\n      <td>RT @misanharriman: NEW IMAGES OF RICHARD OKORO...</td>\n    </tr>\n    <tr>\n      <th>196</th>\n      <td>RT @CPRNews: Family and friends gathered today...</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>RT @Kwesiblack__: Good Morning guys\\nIs Monday...</td>\n    </tr>\n    <tr>\n      <th>198</th>\n      <td>RT @Myanmar_Now_Eng: Three people were killed ...</td>\n    </tr>\n    <tr>\n      <th>199</th>\n      <td>RT @BragonOfBojima: 4K FOLLOWERS... THANK YOU\\...</td>\n    </tr>\n  </tbody>\n</table>\n<p>200 rows × 1 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tweets</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Tough loss today to a very tough Friends Acade...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>RT @misanharriman: NEW IMAGES OF RICHARD OKORO...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RT @JamaicaObserver: A St Catherine man is in ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>RT @arvinjoaquin: A 65-year-old Filipino woman...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RT @misanharriman: NEW IMAGES OF RICHARD OKORO...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>645</th>\n      <td>RT @RG_Horvath: Last December, Trevor Finlay a...</td>\n    </tr>\n    <tr>\n      <th>646</th>\n      <td>RT @OfficialPWI: Beginning the week of April 1...</td>\n    </tr>\n    <tr>\n      <th>647</th>\n      <td>RT @NYPDHateCrimes: Help identify the below in...</td>\n    </tr>\n    <tr>\n      <th>648</th>\n      <td>RT @DerbysPolice: A man has sadly died followi...</td>\n    </tr>\n    <tr>\n      <th>649</th>\n      <td>RT @arvinjoaquin: A 65-year-old Filipino woman...</td>\n    </tr>\n  </tbody>\n</table>\n<p>650 rows × 1 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 13
     }
    ],
    "source": [
@@ -311,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
