--- a/python/nlp_sentiment.ipynb
+++ b/python/nlp_sentiment.ipynb
@@ -88,12 +88,12 @@
     "# response =  urllib.request.urlopen('https://data-bootcamp-036.s3.us-east-2.amazonaws.com/tweets.csv')\n",
     "\n",
     "# create a connection to Postgres\n",
-    "conn = psycopg2.connect(database=\"postgres\", user='root', password='Shjais2014', host='mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com', port='5431')\n",
+    "conn = psycopg2.connect(database=\"postgres\", user='root', password='******', host='******.us-east-2.rds.amazonaws.com', port='5431')\n",
     "conn.autocommit = True\n",
     "cursor = conn.cursor()\n",
     "\n",
     "# create the database connection\n",
-    "engine = create_engine(f'postgresql://root:Shjais2014@mypostgresdb.c49c25fxm9ry.us-east-2.rds.amazonaws.com:5431/twitter_db')\n",
+    "engine = create_engine(f'postgresql://root:******@*******.us-east-2.rds.amazonaws.com:5431/twitter_db')\n",
     "\n",
     "response = urllib.request.urlopen(engine)\n",
     "html = response.read()\n",
